[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openaq"
version = "0.0.1"
authors = [
  { name="Gabe", email="gabe@openaq.org" },
]
description = "Basic OpenAQ API functions"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/majesticio/openaq-package"
"Bug Tracker" = "https://github.com/majesticio/openaq-package/issues"
